ghc-4335c07/testsuite/tests/backpack/should_compile/bkp49.bkp
unit p where
    signature A where
        data T
        instance Eq T
unit q where
    dependency p[A=<A>]
    signature A (T) where
